# PasswordManager

./: LICENSE  README.md  pyproject.toml
src/PasswordManager/: AES.py  Credential.py  Vault.py  __init__.py
tests/: main.py
