[project]
name = "PasswordManager"
version = "0.1.0"
description = "An experimental password manager based on TheProtocols"
readme = "README.md"
license = {text = "MIT"}
maintainers = [{name = "Cagan Mert ISLEK", email = "islekcaganmert@hereus.net"}]
requires-python = ">= 3.10"
dependencies = ["certifi==2024.8.30", "cffi==1.17.1", "charset-normalizer==3.4.0", "cryptography==43.0.3", "idna==3.10", "pycparser==2.22", "requests==2.32.3", "TheProtocols==3.1.0.1", "urllib3==2.2.3"]

[project.urls]
Homepage = "https://github.com/islekcaganmert/PasswordManager"

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"
